Empezando con css

--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevJobs - Inicio</title>
     <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores web.">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h2>DevJob</h2>
+        <h2 class="logo">DevJob</h2>
 
         <nav>
-            <a href="">Buscar</a>
-            <a href="">Empleos</a>
-            <a href="">Empresas</a>
-            <a href="">Salarios</a>
+            <a href="#">Buscar</a>
+            <a href="#">Empleos</a>
+            <a href="#">Empresas</a>
+            <a href="#">Salarios</a>
         </nav>
-        <div>
-            <a href="">Publicar un empleo</a>
-            <a href="">Iniciar sesión</a>
+        <div class="loguin">
+            <a href="#">Publicar un empleo</a>
+            <a href="#">Iniciar sesión</a>
         </div>
 
     </header>
