Progreso de la home

--- a/index.html
+++ b/index.html
@@ -27,31 +27,32 @@
 
     </header>
     <main>
-        <section>
+        <section class="busqueda">
+
+            <img src="./background.webp" />
+
+            <h1 class="title">Encuentra el trabajo de tus sueños</h1>
+            <p class="paragrahp">Únete a la comunidad mas grande de desarrolladores y encuentra tu proxima oportunidad
+            </p>
+            <search class="buscar">
+                <form action="./search/">
+
+                    <div>
+                        <svg class="svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                            fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round"
+                            stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-search">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                            <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
+                            <path d="M21 21l-6 -6" />
+                        </svg>
+
+                        <input type="search" name="q" placeholder="Buscar empleo por titulo, habilidad o empresa"
+                            aria-label="Busqueda">
+                        <button type="submit">Buscar</button>
+                    </div>
+                </form>
+            </search>
         </section>
-        <img src="./background.webp" width="200" />
-
-        <h1>Encuentra el trabajo de tus sueños</h1>
-        <p>Únete a la comunidad mas grande de desarrolladores y encuentra tu proxima oportunidad</p>
-        <search>
-            <form action="./search/">
-
-                <div>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
-                        class="icon icon-tabler icons-tabler-outline icon-tabler-search">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                        <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
-                        <path d="M21 21l-6 -6" />
-                    </svg>
-
-                    <input type="search" name="q" placeholder="Buscar empleo por titulo, habilidad o empresa"
-                        aria-label="Busqueda">
-                    <button type="submit">Buscar</button>
-                </div>
-            </form>
-        </search>
-
         <section>
 
             <h2>¿Por qué DevJobs?</h2>
